--- a/css/style.css
+++ b/css/style.css
@@ -107,6 +107,7 @@ input[type="search"]::-webkit-search-results-decoration {
     line-height: 55px;
     font-weight: 700;
     color: var(--text-black-color);
+    display: inline-block;
 }
 
 .title p {
@@ -949,14 +950,25 @@ section.banner {
     transform: scale(1.08);
 }
 
+.popular__title {
+    text-align: center;
+}
+
 .popular__link {
     width: 100%;
     height: 100%;
     display: flex;
+    justify-content: space-between;
+}
+
+.popular__img {
+    width: 60%;
+    position: relative;
 }
 
 .popular-card img {
     position: absolute;
+    right: 0;
     transition: var(--default-transition);
 }
 
@@ -976,20 +988,22 @@ section.banner {
 .popular-card__sections {
     font-size: 15px;
     font-weight: 300;
+    margin-top: 15px;
 }
 
 .popular-card--big {
     width: 691px;
     height: 472px;
     grid-area: 1 / 1 / 3 / 3;
+    
 }
 
 .popular-card--big .popular__text {
+    width: 30%;
     text-align: right;
     margin-bottom: 45px;
-    margin-left: auto;
-    margin-right: 45px;
     align-self: flex-end;
+    margin-right: 25px;
 }
 
 .popular-card--bottom {
@@ -1001,8 +1015,11 @@ section.banner {
 .popular-card--bottom .popular__text {
     text-align: right;
     align-self: center;
-    margin-right: 45px;
-    margin-left: auto;
+    margin-right: 25px;
+}
+
+.popular-card--bottom .popular__text {
+    width: 30%;
 }
 
 .popular-card--center {
@@ -1012,8 +1029,20 @@ section.banner {
     margin-left: 17px;
 }
 
-.popular-card--center .popular__link {
-    justify-content: flex-end;
+.popular-card--center .popular__link,
+.popular-card--right .popular__link {
+    flex-direction: column;
+}
+
+.popular-card--center .popular__img {
+    width: 100%;
+    height: 60%;
+}
+
+.popular-card--right .popular__img {
+    order: 1;
+    height: 100%;
+    width: 100%;
 }
 
 .popular-card--center .popular__text {
@@ -1083,6 +1112,10 @@ section.banner {
 
 .bestseller__inner {
     position: relative;
+}
+
+.bestseller__title {
+    text-align: center;
 }
 
 .bestseller-slider {
@@ -1175,6 +1208,7 @@ section.banner {
 .product-card__info-box {
     display: flex;
     padding: 15px 10px;
+    gap: 10px;
 }
 
 .product-info__available {
@@ -2405,3 +2439,29 @@ a.footer__nav-link--show {
 }
 
 /* FANCYBOX END */
+
+.skeleton {
+    position: relative;
+}
+
+.skeleton::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    background: linear-gradient(90deg, #eee, #f9f9f9, #eee);
+    background-size: 200%;
+    animation: skeleton 1s infinite linear reverse;
+}
+
+@keyframes skeleton {
+    0% {
+        background-position: -100% 0;
+    }
+    100% {
+        background-position: 100% 0;
+    }
+}
