--- a/css/style.css
+++ b/css/style.css
@@ -1377,6 +1377,10 @@ section.showroom {
     margin-top: 50px;
 }
 
+.rect-btn--showroom.skeleton {
+    border: none;
+}
+
 .showroom-slider .showroom-slider-pagination {
     bottom: 50px;
     left: 0;
@@ -1626,6 +1630,10 @@ section.showroom {
     width: 100%;
     font-size: 18px;
     font-weight: 500;
+}
+
+.rect-btn--faq.skeleton {
+    border: none;
 }
 
 /* FAQ END */
@@ -2478,10 +2486,10 @@ a.footer__nav-link--show {
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 10;
-    background: linear-gradient(90deg, #eee, #f9f9f9, #eee);
+    z-index: 50;
+    background: linear-gradient(90deg, #eee, #d3d3d3, #eee);
     background-size: 200%;
-    animation: skeleton 1s infinite linear reverse;
+    animation: skeleton 2s infinite linear reverse;
 }
 
 @keyframes skeleton {
