--- a/css/style.css
+++ b/css/style.css
@@ -266,7 +266,7 @@ input[type="search"]::-webkit-search-results-decoration {
     display: block;
 }
 
-.header__top-info-dropdown li + li {
+.header__top-info-dropdown li+li {
     margin-top: 10px;
 }
 
@@ -550,7 +550,7 @@ ul.all-categories__list li a:hover {
     padding: 15px 0;
 }
 
-.header__categories-item.has-submenu .header__categories-link:hover ~ .header__categories-submenu {
+.header__categories-item.has-submenu .header__categories-link:hover~.header__categories-submenu {
     display: flex;
 }
 
@@ -575,11 +575,15 @@ a.header__categories-link:hover span {
     gap: 5px;
     background-color: #fff;
     border-radius: 10px;
-    top: calc(100% + 15px);
+    top: calc(100% + 10px);
     left: 50%;
     transform: translateX(-50%);
     padding: 10px 15px;
     min-width: 200px;
+}
+
+.header__categories-submenu:hover {
+    display: flex;
 }
 
 .header__categories-submenu::before {
@@ -612,7 +616,7 @@ a.header__categories-link:hover span {
     position: relative;
 }
 
-.header-panel__item > span {
+.header-panel__item>span {
     position: absolute;
     top: -5px;
     right: -6px;
@@ -642,7 +646,7 @@ a.header__categories-link:hover span {
     max-width: 20px;
 }
 
-.cart-item:hover > .cart-popup {
+.cart-item:hover>.cart-popup {
     display: block;
 }
 
@@ -732,7 +736,7 @@ a.header__categories-link:hover span {
     font-weight: 500;
 }
 
-.cart-popup__price + span {
+.cart-popup__price+span {
     margin-left: 10px;
 }
 
@@ -842,6 +846,7 @@ section.banner {
     from {
         opacity: .4;
     }
+
     to {
         opacity: 1;
     }
@@ -1000,7 +1005,7 @@ section.banner {
     width: 691px;
     height: 472px;
     grid-area: 1 / 1 / 3 / 3;
-    
+
 }
 
 .popular-card--big .popular__text {
@@ -1299,6 +1304,10 @@ section.banner {
     height: 40px;
     border: 1px solid var(--bg-white);
     transition: var(--default-transition);
+}
+
+.product-card__tools .round-btn.skeleton::before {
+    border-radius: 50%;
 }
 
 .product-card__tools .round-btn img {
@@ -1693,7 +1702,7 @@ section.showroom {
     gap: 12px;
 }
 
-.footer__contacts-item + .footer__contacts-item {
+.footer__contacts-item+.footer__contacts-item {
     margin-top: 25px;
 }
 
@@ -1733,7 +1742,7 @@ h4.footer__nav-title a {
     margin-top: 25px;
 }
 
-.footer__nav-item + .footer__nav-item {
+.footer__nav-item+.footer__nav-item {
     margin-top: 20px;
 }
 
@@ -1861,7 +1870,7 @@ a.footer__nav-link--show {
     cursor: pointer;
 }
 
-.swiper.slider-fastview img.country{
+.swiper.slider-fastview img.country {
     position: absolute;
     max-width: 70px;
     max-height: 70px;
@@ -1950,7 +1959,7 @@ a.footer__nav-link--show {
     stroke: var(--main-blue);
 }
 
-.product-box__tool--share:hover svg path, 
+.product-box__tool--share:hover svg path,
 .product-box__tool--pdf:hover svg path {
     fill: var(--main-blue);
 }
@@ -2042,6 +2051,7 @@ a.footer__nav-link--show {
     width: 7px;
     height: 13px;
 }
+
 .slider-fastview-color .slider-fastview-color-button-prev::after {
     content: '';
     background: url('../img/icons/color-slider/arrow-prev.svg') center center / cover no-repeat;
@@ -2062,7 +2072,7 @@ a.footer__nav-link--show {
     line-height: 42px;
 }
 
-.product-box__cost p + p {
+.product-box__cost p+p {
     font-size: 14px;
     line-height: 21px;
     color: var(--subtitle-color);
@@ -2166,7 +2176,7 @@ a.footer__nav-link--show {
     gap: 0 10px;
 }
 
-.product-box__guarantee-item + .product-box__guarantee-item {
+.product-box__guarantee-item+.product-box__guarantee-item {
     margin-top: 10px;
 }
 
@@ -2386,14 +2396,14 @@ a.footer__nav-link--show {
     opacity: 0;
 }
 
-#questionCheckbox + label {
+#questionCheckbox+label {
     display: flex;
     align-items: center;
     user-select: none;
     cursor: pointer;
 }
 
-#questionCheckbox + label::before {
+#questionCheckbox+label::before {
     content: '';
     display: inline-block;
     width: 16px;
@@ -2406,7 +2416,7 @@ a.footer__nav-link--show {
     padding: 3px;
 }
 
-#questionCheckbox:checked + label::before {
+#questionCheckbox:checked+label::before {
     background-image: url('../img/icons/check.svg');
 }
 
@@ -2477,6 +2487,7 @@ a.footer__nav-link--show {
 
 .skeleton {
     position: relative;
+    overflow: hidden;
 }
 
 .skeleton::before {
@@ -2490,12 +2501,15 @@ a.footer__nav-link--show {
     background: linear-gradient(90deg, #eee, #d3d3d3, #eee);
     background-size: 200%;
     animation: skeleton 2s infinite linear reverse;
+    border-radius: 10px;
 }
+
 
 @keyframes skeleton {
     0% {
         background-position: -100% 0;
     }
+
     100% {
         background-position: 100% 0;
     }
