--- a/css/global.css
+++ b/css/global.css
@@ -13,6 +13,7 @@
     --alt-transition: all .2s;
     --red-color: #F63B00;
     --subtitle-color: #5d6c7b;
+    --filter-bg-color: #f4f7fb;
 }
 
 html {
